Fix footer color overlap on contact page
The footer was never changed when the design of the contact page was updated.

--- a/anonsys_tech/anonsys_tech/home/static/css/contact.css
+++ b/anonsys_tech/anonsys_tech/home/static/css/contact.css
@@ -1,6 +1,9 @@
 body{
     background: -webkit-linear-gradient(left, #007295, #152638, #007295)!important;
 }
+footer{
+    background: transparent!important;
+}
 .contact-form{
     background: #fff;
     margin-top: 1%;
